# KernelCodeGen

./: .gitignore  CMakeLists.txt  README.md  set_git_env.sh
cmake/: MLIRConfig.cmake
doc/: pass.md
include/: KernelCodeGen.h
include/Frontend/: Operators.h
include/Optimizer/: Optimizer.h  Rewriter.h
src/: KernelCodeGen.cc
src/Backend/: CUDA.cc
src/Frontend/: Operators.cc
src/Optimizer/: Optimizer.cc  Rewriter.cc
test/: CMakeLists.txt  test.cc
